- IMPROVEMENT: Check branch consistency during resolve (IVY-858)
- IMPROVEMENT: Give the possibility to not compute ivy.deps.changed (IVY-876)
- IMPROVEMENT: Add a memory cache for the module descriptor that are parsed from the cache (IVY-883)
- IMPROVEMENT: Improve performance (IVY-872)

- FIX: Ivy stand-alone ignores -cache argument (IVY-901) (thanks to Chris)
- FIX: ivy.cache.dir.${settingsRef} is set to default instead of the defaultCacheDir from the ivysettings.xml after ivy:resolve (IVY-898)
- FIX: Ivy ibiblio resolver chokes on variables while checking descriptor consistency (IVY-818)
- FIX: Enable consistent support of the configuration negation operator (IVY-894) (thanks to Patrick Woodworth)
- FIX: add variable expansion in extra attributes (IVY-798)
- FIX: Invalid URL when using dynamic ranges (IVY-885)
- FIX: can't use gotoNode with a node which has not been visited yet (IVY-874)
- FIX: Ivy Publish Task Fails When XML Comments Exist Next to Dependency Declarations (IVY-888)
- FIX: Incorrect directory path resolve when running from a different directory (IVY-232)
- FIX: Ivy#listTokenValues(String, Map) does not filter returned values, and does not use maven-metadata.xml files with IBiblio resolver (IVY-886)
- FIX: Circular Dependency messages in a resolve do not reflect the configuration used during the resolve (IVY-708)
- FIX: Failure to transitively install Maven2 artifacts with namespace (IVY-440)
- FIX: Unwanted eviction of dependencies when optional attributes in dependency and info tags are in consistent (IVY-745)
- FIX: HTTP Handlers ignore unsuccessful response codes (IVY-864) (thanks to James P. White)
- FIX: Deliver delivers the wrong version when a dynamic revision is evicted before being resolved (IVY-707)
- FIX: Inconsistency with "multi-project" tutorial (IVY-667)
- FIX: URLRepository does not allow some valid file scheme uri's (IVY-884)